--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ new THREE.RGBELoader()
     pmremGenerator.dispose();
   });
 
-// Загрузка модели с Google Drive
+// Загрузка модели с Google Drive (прямая ссылка)
 const loader = new THREE.GLTFLoader();
 loader.load("https://drive.google.com/uc?export=download&id=1r9Xjqfdvz-0yCwnbp1CjlrCKeAJlW29I", gltf => {
   const model = gltf.scene;
